Correct spacing inside the modal.
Modal now has more defined modal sizes.

--- a/src/assets/css/components/_app.scss
+++ b/src/assets/css/components/_app.scss
@@ -7,5 +7,6 @@
 }
 
 .container--gutter {
-  padding: 0 $grid-gutter-width;
+  padding-left: $grid-gutter-width;
+  padding-right: $grid-gutter-width;
 }
